webview/src/assets/scss/_custom.scss
/* ... */
.center-container {
  display: flex;
  align-items: center;
  justify-items: center;
}

// .ck-editor__editable_inline {
//   // min-height: 200px;
//   // max-height: 200px;
// }

.none_ck-toolbar_border .ck-toolbar {
  border: none !important;
}

.none_ck-toolbar_border .ck-editor__editable_inline {
  border: none !important;
}

.none_expansion-panel-padding .v-expansion-panel-text__wrapper{
  padding: 0 !important;
}

.center_expansion-panel-icon .v-expansion-panel-title{
  display: inline !important;
}

.none_expansion-panel-background-color .v-expansion-panel-title__overlay{
  background-color:#fff !important;
}

.none_expansion-panel-box-shadow .v-expansion-panel__shadow{
  box-shadow: none !important;
}

.v-list-item-title{
  font-size: 0.8rem !important;
}

.v-list-item-subtitle{
  font-size: 0.75rem !important;
}

.ck-content ul {
  margin-left: 20px;
}

.ck-content ol {
  margin-left: 20px;
}

.topbar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.spinner-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(255, 255, 255, 0.60);
  z-index: 9999;
}

